# kintro

./: .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yml
build-scripts/: run-mypy
docker/: Dockerfile-dev  direnvrc  direnvrc_helpers.py
kintro/: connect.py  decisions.py  kintro.py  plex.py  utils.py
requirements/: dev.in  dev.txt  runtime.in  runtime.txt  style.in  style.txt  typing.txt
