[metadata]
name = kintro
url = https://github.com/brutog/kintro
project_urls =
    Source Code = https://github.com/brutog/kintro
author = bru
description = Command line tool for creating kodi compatible edl from plex
keywords = kodi, plex, intro, edl
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
install_requires =
  click
  click_option_group
  plexapi
  more_itertools>=7.1.0

[options.entry_points]
console_scripts =
    kintro = kintro.kintro:cli
